Change style to rose-pine-dawn

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -11,6 +11,8 @@
 {{ end }}
 
 <link rel="stylesheet" href="{{ "/css/style.css" | relURL }}">
+<link rel="stylesheet" href="{{ "/css/syntax.css" | relURL }}">
+<link rel="stylesheet" href="{{ "/css/custom.css" | relURL }}">
 
 {{ range .Site.Params.customCSS }}
   {{ if ( or ( hasPrefix . "http://" ) ( hasPrefix . "https://" ) ) }}
